# mpd-repo

./: .gitignore  CLAUDE.md  Persona_Registry_v4.9.md  Persona_Registry_v5.0.md  Persona_Registry_v5.2.md  Persona_Registry_v5.3.md  Persona_Registry_v5.4.md  README.md
config/: .env.example  mcp.json
personas/: 001-executive-strategic-advisor.md  002-executive-assistant.md  003-market-research-specialist.md  004-sales-enablement.md  005-document-creator.md  006-technical-writer.md  007-marketing-advisor.md  008-legal-expert.md  009-software-architect.md  010-the-architect.md  011-elite-endurance-coach.md  012-advanced-prompt-engineer.md  013-authenticity-reviewer.md  014-sage-intacct-support-specialist.md  015-Bilingual_Transcript_Specialist.txt  015-bilingual-transcript-specialist.md  016-airbnb-host-assistant.md  017-complex-document-analyst.md  018-expert-document-editor.md  019-biblical-shepherd.md  020-uipath-specialist.md  021-financial-modelling-expert.md
protocols/: CTX-001-context-compression.md  MEM-001-memory-protocol.md  MEM-003-memory-isolation.md  PR-015-Transcription_Quality_Assurance.txt  PR-016-Transcription_Accuracy.txt  PR-017-Long-Complex-Task-Execution.md  PR-019-rlm-protocol.md  (+19 more)
reference/transcription-mcp-v2/: .env.example  ARCHITECTURE_v2.0.md  INSTALL_CHECKPOINT.md  README.md  complete_laptop_setup.ps1  install.ps1  install_laptop.bat  pyproject.toml
reference/transcription-mcp-v2/config/: vocabulary.json
reference/transcription-mcp-v2/src/transcription_mcp/: __init__.py  checkpoint.py  output.py  server.py  transcriber.py  vocabulary.py
(+70 files in other folders)
